fixed z-index position the header section

--- a/style.scss
+++ b/style.scss
@@ -17,7 +17,7 @@ body {
   left: 0;
   right: 0;
   width: 100%;
-  //   background-color: #2f2f2f;
+  z-index: 3;
 }
 
 .header__wrapper {
